Fixed image background that works on mobile.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -453,7 +453,7 @@ html {
 /* - Blog and post headers - */
 #masthead {
   position: relative;
-  background-attachment: fixed;
+  background-attachment: scroll;
   display: table;
   text-align: center;
   width: 100%;
@@ -649,17 +649,18 @@ html {
 /* - Theme Backgrounds - */
 .blog-background {
   background-repeat: no-repeat;
-  background-position: center;
+  /*background-position: center;*/
+  background-position: left top;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  background-attachment: fixed;
+  background-attachment: scroll;
 }
-@media (max-width: 1024px) {
+/*@media (max-width: 1024px) {
   .blog-background {
     background-attachment: scroll;
-  }
+  }*/
 }
 /* - Inner allignment - */
 .inner {
